# ClickHouse_SketchDB_2

./: .gitignore  .gitmodules  build.sh
programs/client/: CMakeLists.txt  Client.cpp
programs/server/: CMakeLists.txt  Server.cpp  config.xml
sketchdb_patches/: README.md  full_diff.patch  full_diff_2.patch
src/: CMakeLists.txt
src/AggregateFunctions/: AggregateFunctionFactory.h  CMakeLists.txt  registerAggregateFunctions.cpp
src/AggregateFunctions/sketches/: AggregateFunctionCardinalityLC.cpp  AggregateFunctionCardinalityLC.h  AggregateFunctionEntropyCountSketch.cpp  AggregateFunctionEntropyCountSketch.h  AggregateFunctionEntropyMRAC.cpp  AggregateFunctionEntropyMRAC.h  AggregateFunctionHeavyHitterCardinalitiesCountSketch.cpp  AggregateFunctionHeavyHitterCardinalitiesCountSketch.h  AggregateFunctionHeavyHitterFlowkeysCountSketch.cpp  AggregateFunctionHeavyHitterFlowkeysCountSketch.h  README.md  Utils.h
src/Columns/: ColumnArray.cpp
src/Common/: ErrorCodes.cpp
src/Core/: Settings.h
src/Interpreters/: InterpreterSelectQuery.cpp  InterpreterSelectQuery.h
src/Sketches/: CMakeLists.txt  Config.h  CountMin.cpp  CountMin.h  CountSketch.cpp  CountSketch.h  ISketch.cpp  ISketch.h  LC.cpp  LC.h  MRAC.cpp  MRAC.h  README.md  SketchFactory.cpp  SketchFactory.h  registerSketches.cpp  registerSketches.h
src/Storages/: IStorage.h  MemorySettings.h  StorageMemory.cpp  StorageMemory.h
